# video-ratings

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  INSTALL.md  README.ja.md  README.md  TESTING.md  backup.sql  docker-compose.yml  init.csv
.github/workflows/: ci.yml  release.yml
backend/: .coverage  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_descriptions.py  003_performer_custom_fields.py  004_tag_sort_order.py  005_add_users.py  005_custom_field_sort_order.py  006_cover_image_path.py  007_performer_aliases.py  008_add_memo_columns.py  009_add_is_sortable_to_custom_fields.py  010_coerce_numeric_custom_fields.py  011_remove_maker_series.py  012_add_users.py  012_add_users_table.py  013_add_is_search_keyword_to_custom_fields.py
backend/app/: auth.py  cli.py  config.py  database.py  main.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: auth.py  custom_fields.py  data.py  imports.py  performers.py  search.py  tags.py  works.py
backend/app/schemas/: custom_field.py  imports.py  performer.py  search.py  tag.py  work.py
backend/app/services/: cover_service.py  performer_service.py  score_calculator.py  smb.py  work_service.py
backend/scripts/: resize_covers.py
backend/tests/: conftest.py  test_auth.py  test_authorization.py  test_cli.py  test_docs_endpoint.py
backend/tests/routers/: test_imports.py  test_performers.py
backend/tests/schemas/: test_schemas.py
backend/tests/services/: test_score_calculator.py
etc/: env.example  nginx.conf  video-ratings.service
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/coverage/: client.test.ts.html  client.ts.html  clover.xml  coverage-final.json  index.html
frontend/src/: App.tsx  index.css  main.tsx
scripts/: install.sh  update.sh
(+473 files in other folders)
