[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-ratings-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "bcrypt>=4.0.0",
    "click>=8.1.0",
    "fastapi>=0.115.0",
    "itsdangerous>=2.1.0",
    "Pillow>=11.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "smbprotocol>=1.13.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "httpx2>=0.1.0",
]

[tool.pytest.ini_options]
markers = ["unit", "integration"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "app/routers/*",
    "app/main.py",
    "app/database.py",
    "app/config.py",
    "app/auth.py",
    "app/cli.py",
    "app/__main__.py",
    "app/services/smb.py",
    "alembic/*",
    "tests/test_auth.py",
    "tests/test_authorization.py",
    "tests/test_cli.py",
]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "httpx2>=0.1.0",
]
